# MAT4110-Obliger

./: .gitignore  README.md  pyproject.toml
Oblig1/: oblig1.py
Oblig2/: MAT4110_oblig2.py
oblig2/: MAT4110_oblig2.py  README.md
